src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CTECH
    NOT

Grammar

Rule 0     S' -> P
Rule 1     P -> PROGRAM ID SEMICOLON P_STRUCTURE
Rule 2     P_STRUCTURE -> P_STR_ONE PROG_MEMBERS PROG_M_ONE
Rule 3     P_STR_ONE -> LIBS_DECLARATION
Rule 4     P_STR_ONE -> empty
Rule 5     PROG_MEMBERS -> CLASS_STR
Rule 6     PROG_MEMBERS -> FUNCTION
Rule 7     PROG_MEMBERS -> DEC_VAR
Rule 8     PROG_M_ONE -> PROG_MEMBERS PROG_M_ONE
Rule 9     PROG_M_ONE -> empty
Rule 10    LIBS_DECLARATION -> LIB LIB_ONE
Rule 11    LIB_ONE -> LIB LIB_ONE
Rule 12    LIB_ONE -> empty
Rule 13    LIB -> IMPORT ID SEMICOLON
Rule 14    CLASS_STR -> CLASS_DEC LBRACE CLASS_BODY RBRACE
Rule 15    CLASS_DEC -> CLASS ID CLASS_DEC_ONE
Rule 16    CLASS_DEC_ONE -> CLASS_INHERITS
Rule 17    CLASS_DEC_ONE -> empty
Rule 18    CLASS_INHERITS -> DERIVES ID
Rule 19    CLASS_BODY -> CLASS_CONSTRUCTOR CLASS_BODY_MEMBER CLASS_B_M_ONE
Rule 20    CLASS_B_M_ONE -> CLASS_BODY_MEMBER CLASS_B_M_ONE
Rule 21    CLASS_B_M_ONE -> empty
Rule 22    CLASS_BODY_MEMBER -> FUNCTION
Rule 23    CLASS_BODY_MEMBER -> DEC_VAR
Rule 24    CLASS_CONSTRUCTOR -> ID LPAREN CLASS_C_ONE RPAREN BLOCK
Rule 25    CLASS_C_ONE -> PARAM
Rule 26    CLASS_C_ONE -> empty
Rule 27    FIELD_ACCESS -> ID POINT ID
Rule 28    FUNCTION_ACCESS -> ID POINT FUNCTION_CALL
Rule 29    FUNCTION_CALL -> ID LPAREN EXP FUNCTION_C_ONE RPAREN
Rule 30    FUNCTION_C_ONE -> COMMA EXP FUNCTION
Rule 31    FUNCTION_DEC -> FUNC FUNCTION_D_ONE ID LPAREN FUNCTION_D_TWO RPAREN
Rule 32    FUNCTION -> FUNCTION_DEC BLOCK
Rule 33    FUNCTION_D_ONE -> SIMPLE_TYPE
Rule 34    FUNCTION_D_ONE -> VOID
Rule 35    FUNCTION_D_TWO -> PARAM
Rule 36    FUNCTION_D_TWO -> empty
Rule 37    PARAM -> SIMPLE_TYPE ID PARAM_ONE
Rule 38    PARAM_ONE -> COMMA PARAM
Rule 39    PARAM_ONE -> empty
Rule 40    VARIABLE -> ID VARIABLE_ONE
Rule 41    VARIABLE -> FIELD_ACCESS
Rule 42    VARIABLE_ONE -> LSBRACKET EXP RSBRACKET VARIABLE_ONE
Rule 43    VARIABLE_ONE -> empty
Rule 44    ASSIGN_OP -> VARIABLE ASSIGN EXP SEMICOLON
Rule 45    DEC_VAR -> VAR DEC_VAR_ONE SEMICOLON
Rule 46    DEC_VAR_ONE -> COMPLEX_TYPE ID DEC_V_O_COMPLEX
Rule 47    DEC_VAR_ONE -> SIMPLE_TYPE ID DEC_ARR DEC_V_O_SIMPLE
Rule 48    DEC_V_O_SIMPLE -> COMMA ID DEC_ARR DEC_V_O_SIMPLE
Rule 49    DEC_V_O_SIMPLE -> empty
Rule 50    DEC_ARR -> LSBRACKET CTEI RSBRACKET DEC_ARR_ONE
Rule 51    DEC_ARR_ONE -> LSBRACKET CTEI RSBRACKET
Rule 52    DEC_ARR_ONE -> empty
Rule 53    DEC_V_O_COMPLEX -> COMMA ID DEC_V_O_COMPLEX
Rule 54    DEC_V_O_COMPLEX -> empty
Rule 55    SIMPLE_TYPE -> INT
Rule 56    SIMPLE_TYPE -> FLOAT
Rule 57    SIMPLE_TYPE -> CHAR
Rule 58    COMPLEX_TYPE -> ID
Rule 59    EXP -> T_EXP EXP_ONE
Rule 60    EXP_ONE -> OR EXP
Rule 61    EXP_ONE -> empty
Rule 62    T_EXP -> G_EXP T_EXP_ONE
Rule 63    T_EXP_ONE -> AND T_EXP
Rule 64    T_EXP_ONE -> empty
Rule 65    G_EXP -> MID_EXP G_EXP_ONE
Rule 66    G_EXP_ONE -> G_EXP_TWO MID_EXP
Rule 67    G_EXP_TWO -> LT
Rule 68    G_EXP_TWO -> GT
Rule 69    G_EXP_TWO -> NE
Rule 70    G_EXP_TWO -> EQ
Rule 71    G_EXP_TWO -> GTE
Rule 72    G_EXP_TWO -> LTE
Rule 73    MID_EXP -> TERM MID_EXP_ONE
Rule 74    MID_EXP_ONE -> PLUS MID_EXP
Rule 75    MID_EXP_ONE -> MINUS MID_EXP
Rule 76    MID_EXP_ONE -> empty
Rule 77    TERM -> FACT TERM_ONE
Rule 78    TERM_ONE -> TIMES TERM
Rule 79    TERM_ONE -> DIVIDE TERM
Rule 80    TERM_ONE -> empty
Rule 81    FACT -> CTEI
Rule 82    FACT -> CTEF
Rule 83    FACT -> VARIABLE
Rule 84    FACT -> FUNCTION_CALL
Rule 85    FACT -> LPAREN EXP RPAREN
Rule 86    BLOCK -> LBRACE BLOCK_ONE RBRACE
Rule 87    BLOCK_ONE -> BLOCK_STMT BLOCK_ONE
Rule 88    BLOCK_ONE -> empty
Rule 89    BLOCK_STMT -> STMT
Rule 90    BLOCK_STMT -> DEC_VAR
Rule 91    STMT -> ASSIGN_OP
Rule 92    STMT -> FUNCTION_CALL
Rule 93    STMT -> READ_FUNC
Rule 94    STMT -> PRINT_FUNC
Rule 95    STMT -> COND
Rule 96    STMT -> WHILE_LOOP
Rule 97    STMT -> RETURN_FUNC
Rule 98    RETURN_FUNC -> RETURN RETURN_F_ONE SEMICOLON
Rule 99    RETURN_F_ONE -> VARIABLE
Rule 100   RETURN_F_ONE -> EXP
Rule 101   PRINT_FUNC -> PRINT LPAREN EXP RPAREN SEMICOLON
Rule 102   READ_FUNC -> READ VARIABLE SEMICOLON
Rule 103   WHILE_LOOP -> WHILE LPAREN EXP RPAREN NESTED_BLOCK
Rule 104   COND -> IF LPAREN EXP RPAREN NESTED_BLOCK COND_ONE
Rule 105   COND_ONE -> ELSE NESTED_BLOCK
Rule 106   COND_ONE -> empty
Rule 107   NESTED_BLOCK -> LBRACE NESTED_B_ONE RBRACE
Rule 108   NESTED_B_ONE -> STMT NESTED_B_ONE
Rule 109   NESTED_B_ONE -> empty
Rule 110   empty -> <empty>

Terminals, with rules where they appear

AND                  : 63
ASSIGN               : 44
CHAR                 : 57
CLASS                : 15
COMMA                : 30 38 48 53
CTECH                : 
CTEF                 : 82
CTEI                 : 50 51 81
DERIVES              : 18
DIVIDE               : 79
ELSE                 : 105
EQ                   : 70
FLOAT                : 56
FUNC                 : 31
GT                   : 68
GTE                  : 71
ID                   : 1 13 15 18 24 27 27 28 29 31 37 40 46 47 48 53 58
IF                   : 104
IMPORT               : 13
INT                  : 55
LBRACE               : 14 86 107
LPAREN               : 24 29 31 85 101 103 104
LSBRACKET            : 42 50 51
LT                   : 67
LTE                  : 72
MINUS                : 75
NE                   : 69
NOT                  : 
OR                   : 60
PLUS                 : 74
POINT                : 27 28
PRINT                : 101
PROGRAM              : 1
RBRACE               : 14 86 107
READ                 : 102
RETURN               : 98
RPAREN               : 24 29 31 85 101 103 104
RSBRACKET            : 42 50 51
SEMICOLON            : 1 13 44 45 98 101 102
TIMES                : 78
VAR                  : 45
VOID                 : 34
WHILE                : 103
error                : 

Nonterminals, with rules where they appear

ASSIGN_OP            : 91
BLOCK                : 24 32
BLOCK_ONE            : 86 87
BLOCK_STMT           : 87
CLASS_BODY           : 14
CLASS_BODY_MEMBER    : 19 20
CLASS_B_M_ONE        : 19 20
CLASS_CONSTRUCTOR    : 19
CLASS_C_ONE          : 24
CLASS_DEC            : 14
CLASS_DEC_ONE        : 15
CLASS_INHERITS       : 16
CLASS_STR            : 5
COMPLEX_TYPE         : 46
COND                 : 95
COND_ONE             : 104
DEC_ARR              : 47 48
DEC_ARR_ONE          : 50
DEC_VAR              : 7 23 90
DEC_VAR_ONE          : 45
DEC_V_O_COMPLEX      : 46 53
DEC_V_O_SIMPLE       : 47 48
EXP                  : 29 30 42 44 60 85 100 101 103 104
EXP_ONE              : 59
FACT                 : 77
FIELD_ACCESS         : 41
FUNCTION             : 6 22 30
FUNCTION_ACCESS      : 
FUNCTION_CALL        : 28 84 92
FUNCTION_C_ONE       : 29
FUNCTION_DEC         : 32
FUNCTION_D_ONE       : 31
FUNCTION_D_TWO       : 31
G_EXP                : 62
G_EXP_ONE            : 65
G_EXP_TWO            : 66
LIB                  : 10 11
LIBS_DECLARATION     : 3
LIB_ONE              : 10 11
MID_EXP              : 65 66 74 75
MID_EXP_ONE          : 73
NESTED_BLOCK         : 103 104 105
NESTED_B_ONE         : 107 108
P                    : 0
PARAM                : 25 35 38
PARAM_ONE            : 37
PRINT_FUNC           : 94
PROG_MEMBERS         : 2 8
PROG_M_ONE           : 2 8
P_STRUCTURE          : 1
P_STR_ONE            : 2
READ_FUNC            : 93
RETURN_FUNC          : 97
RETURN_F_ONE         : 98
SIMPLE_TYPE          : 33 37 47
STMT                 : 89 108
TERM                 : 73 78 79
TERM_ONE             : 77
T_EXP                : 59 63
T_EXP_ONE            : 62
VARIABLE             : 44 83 99 102
VARIABLE_ONE         : 40 42
WHILE_LOOP           : 96
empty                : 4 9 12 17 21 26 36 39 43 49 52 54 61 64 76 80 88 106 109

Parsing method: LALR

state 0

    (0) S' -> . P
    (1) P -> . PROGRAM ID SEMICOLON P_STRUCTURE

    PROGRAM         shift and go to state 2

    P                              shift and go to state 1

state 1

    (0) S' -> P .



state 2

    (1) P -> PROGRAM . ID SEMICOLON P_STRUCTURE

    ID              shift and go to state 3


state 3

    (1) P -> PROGRAM ID . SEMICOLON P_STRUCTURE

    SEMICOLON       shift and go to state 4


state 4

    (1) P -> PROGRAM ID SEMICOLON . P_STRUCTURE
    (2) P_STRUCTURE -> . P_STR_ONE PROG_MEMBERS PROG_M_ONE
    (3) P_STR_ONE -> . LIBS_DECLARATION
    (4) P_STR_ONE -> . empty
    (10) LIBS_DECLARATION -> . LIB LIB_ONE
    (110) empty -> .
    (13) LIB -> . IMPORT ID SEMICOLON

    VAR             reduce using rule 110 (empty -> .)
    CLASS           reduce using rule 110 (empty -> .)
    FUNC            reduce using rule 110 (empty -> .)
    IMPORT          shift and go to state 10

    P_STRUCTURE                    shift and go to state 5
    P_STR_ONE                      shift and go to state 6
    LIBS_DECLARATION               shift and go to state 7
    empty                          shift and go to state 8
    LIB                            shift and go to state 9

state 5

    (1) P -> PROGRAM ID SEMICOLON P_STRUCTURE .

    $end            reduce using rule 1 (P -> PROGRAM ID SEMICOLON P_STRUCTURE .)


state 6

    (2) P_STRUCTURE -> P_STR_ONE . PROG_MEMBERS PROG_M_ONE
    (5) PROG_MEMBERS -> . CLASS_STR
    (6) PROG_MEMBERS -> . FUNCTION
    (7) PROG_MEMBERS -> . DEC_VAR
    (14) CLASS_STR -> . CLASS_DEC LBRACE CLASS_BODY RBRACE
    (32) FUNCTION -> . FUNCTION_DEC BLOCK
    (45) DEC_VAR -> . VAR DEC_VAR_ONE SEMICOLON
    (15) CLASS_DEC -> . CLASS ID CLASS_DEC_ONE
    (31) FUNCTION_DEC -> . FUNC FUNCTION_D_ONE ID LPAREN FUNCTION_D_TWO RPAREN

    VAR             shift and go to state 17
    CLASS           shift and go to state 18
    FUNC            shift and go to state 19

    PROG_MEMBERS                   shift and go to state 11
    CLASS_STR                      shift and go to state 12
    FUNCTION                       shift and go to state 13
    DEC_VAR                        shift and go to state 14
    CLASS_DEC                      shift and go to state 15
    FUNCTION_DEC                   shift and go to state 16

state 7

    (3) P_STR_ONE -> LIBS_DECLARATION .

    VAR             reduce using rule 3 (P_STR_ONE -> LIBS_DECLARATION .)
    CLASS           reduce using rule 3 (P_STR_ONE -> LIBS_DECLARATION .)
    FUNC            reduce using rule 3 (P_STR_ONE -> LIBS_DECLARATION .)


state 8

    (4) P_STR_ONE -> empty .

    VAR             reduce using rule 4 (P_STR_ONE -> empty .)
    CLASS           reduce using rule 4 (P_STR_ONE -> empty .)
    FUNC            reduce using rule 4 (P_STR_ONE -> empty .)


state 9

    (10) LIBS_DECLARATION -> LIB . LIB_ONE
    (11) LIB_ONE -> . LIB LIB_ONE
    (12) LIB_ONE -> . empty
    (13) LIB -> . IMPORT ID SEMICOLON
    (110) empty -> .

    IMPORT          shift and go to state 10
    VAR             reduce using rule 110 (empty -> .)
    CLASS           reduce using rule 110 (empty -> .)
    FUNC            reduce using rule 110 (empty -> .)

    LIB                            shift and go to state 20
    LIB_ONE                        shift and go to state 21
    empty                          shift and go to state 22

state 10

    (13) LIB -> IMPORT . ID SEMICOLON

    ID              shift and go to state 23


state 11

    (2) P_STRUCTURE -> P_STR_ONE PROG_MEMBERS . PROG_M_ONE
    (8) PROG_M_ONE -> . PROG_MEMBERS PROG_M_ONE
    (9) PROG_M_ONE -> . empty
    (5) PROG_MEMBERS -> . CLASS_STR
    (6) PROG_MEMBERS -> . FUNCTION
    (7) PROG_MEMBERS -> . DEC_VAR
    (110) empty -> .
    (14) CLASS_STR -> . CLASS_DEC LBRACE CLASS_BODY RBRACE
    (32) FUNCTION -> . FUNCTION_DEC BLOCK
    (45) DEC_VAR -> . VAR DEC_VAR_ONE SEMICOLON
    (15) CLASS_DEC -> . CLASS ID CLASS_DEC_ONE
    (31) FUNCTION_DEC -> . FUNC FUNCTION_D_ONE ID LPAREN FUNCTION_D_TWO RPAREN

    $end            reduce using rule 110 (empty -> .)
    VAR             shift and go to state 17
    CLASS           shift and go to state 18
    FUNC            shift and go to state 19

    PROG_MEMBERS                   shift and go to state 24
    PROG_M_ONE                     shift and go to state 25
    empty                          shift and go to state 26
    CLASS_STR                      shift and go to state 12
    FUNCTION                       shift and go to state 13
    DEC_VAR                        shift and go to state 14
    CLASS_DEC                      shift and go to state 15
    FUNCTION_DEC                   shift and go to state 16

state 12

    (5) PROG_MEMBERS -> CLASS_STR .

    VAR             reduce using rule 5 (PROG_MEMBERS -> CLASS_STR .)
    CLASS           reduce using rule 5 (PROG_MEMBERS -> CLASS_STR .)
    FUNC            reduce using rule 5 (PROG_MEMBERS -> CLASS_STR .)
    $end            reduce using rule 5 (PROG_MEMBERS -> CLASS_STR .)


state 13

    (6) PROG_MEMBERS -> FUNCTION .

    VAR             reduce using rule 6 (PROG_MEMBERS -> FUNCTION .)
    CLASS           reduce using rule 6 (PROG_MEMBERS -> FUNCTION .)
    FUNC            reduce using rule 6 (PROG_MEMBERS -> FUNCTION .)
    $end            reduce using rule 6 (PROG_MEMBERS -> FUNCTION .)


state 14

    (7) PROG_MEMBERS -> DEC_VAR .

    VAR             reduce using rule 7 (PROG_MEMBERS -> DEC_VAR .)
    CLASS           reduce using rule 7 (PROG_MEMBERS -> DEC_VAR .)
    FUNC            reduce using rule 7 (PROG_MEMBERS -> DEC_VAR .)
    $end            reduce using rule 7 (PROG_MEMBERS -> DEC_VAR .)


state 15

    (14) CLASS_STR -> CLASS_DEC . LBRACE CLASS_BODY RBRACE

    LBRACE          shift and go to state 27


state 16

    (32) FUNCTION -> FUNCTION_DEC . BLOCK
    (86) BLOCK -> . LBRACE BLOCK_ONE RBRACE

    LBRACE          shift and go to state 29

    BLOCK                          shift and go to state 28

state 17

    (45) DEC_VAR -> VAR . DEC_VAR_ONE SEMICOLON
    (46) DEC_VAR_ONE -> . COMPLEX_TYPE ID DEC_V_O_COMPLEX
    (47) DEC_VAR_ONE -> . SIMPLE_TYPE ID DEC_ARR DEC_V_O_SIMPLE
    (58) COMPLEX_TYPE -> . ID
    (55) SIMPLE_TYPE -> . INT
    (56) SIMPLE_TYPE -> . FLOAT
    (57) SIMPLE_TYPE -> . CHAR

    ID              shift and go to state 32
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    CHAR            shift and go to state 36

    DEC_VAR_ONE                    shift and go to state 30
    COMPLEX_TYPE                   shift and go to state 31
    SIMPLE_TYPE                    shift and go to state 33

state 18

    (15) CLASS_DEC -> CLASS . ID CLASS_DEC_ONE

    ID              shift and go to state 37


state 19

    (31) FUNCTION_DEC -> FUNC . FUNCTION_D_ONE ID LPAREN FUNCTION_D_TWO RPAREN
    (33) FUNCTION_D_ONE -> . SIMPLE_TYPE
    (34) FUNCTION_D_ONE -> . VOID
    (55) SIMPLE_TYPE -> . INT
    (56) SIMPLE_TYPE -> . FLOAT
    (57) SIMPLE_TYPE -> . CHAR

    VOID            shift and go to state 40
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    CHAR            shift and go to state 36

    FUNCTION_D_ONE                 shift and go to state 38
    SIMPLE_TYPE                    shift and go to state 39

state 20

    (11) LIB_ONE -> LIB . LIB_ONE
    (11) LIB_ONE -> . LIB LIB_ONE
    (12) LIB_ONE -> . empty
    (13) LIB -> . IMPORT ID SEMICOLON
    (110) empty -> .

    IMPORT          shift and go to state 10
    VAR             reduce using rule 110 (empty -> .)
    CLASS           reduce using rule 110 (empty -> .)
    FUNC            reduce using rule 110 (empty -> .)

    LIB                            shift and go to state 20
    LIB_ONE                        shift and go to state 41
    empty                          shift and go to state 22

state 21

    (10) LIBS_DECLARATION -> LIB LIB_ONE .

    VAR             reduce using rule 10 (LIBS_DECLARATION -> LIB LIB_ONE .)
    CLASS           reduce using rule 10 (LIBS_DECLARATION -> LIB LIB_ONE .)
    FUNC            reduce using rule 10 (LIBS_DECLARATION -> LIB LIB_ONE .)


state 22

    (12) LIB_ONE -> empty .

    VAR             reduce using rule 12 (LIB_ONE -> empty .)
    CLASS           reduce using rule 12 (LIB_ONE -> empty .)
    FUNC            reduce using rule 12 (LIB_ONE -> empty .)


state 23

    (13) LIB -> IMPORT ID . SEMICOLON

    SEMICOLON       shift and go to state 42


state 24

    (8) PROG_M_ONE -> PROG_MEMBERS . PROG_M_ONE
    (8) PROG_M_ONE -> . PROG_MEMBERS PROG_M_ONE
    (9) PROG_M_ONE -> . empty
    (5) PROG_MEMBERS -> . CLASS_STR
    (6) PROG_MEMBERS -> . FUNCTION
    (7) PROG_MEMBERS -> . DEC_VAR
    (110) empty -> .
    (14) CLASS_STR -> . CLASS_DEC LBRACE CLASS_BODY RBRACE
    (32) FUNCTION -> . FUNCTION_DEC BLOCK
    (45) DEC_VAR -> . VAR DEC_VAR_ONE SEMICOLON
    (15) CLASS_DEC -> . CLASS ID CLASS_DEC_ONE
    (31) FUNCTION_DEC -> . FUNC FUNCTION_D_ONE ID LPAREN FUNCTION_D_TWO RPAREN

    $end            reduce using rule 110 (empty -> .)
    VAR             shift and go to state 17
    CLASS           shift and go to state 18
    FUNC            shift and go to state 19

    PROG_MEMBERS                   shift and go to state 24
    PROG_M_ONE                     shift and go to state 43
    empty                          shift and go to state 26
    CLASS_STR                      shift and go to state 12
    FUNCTION                       shift and go to state 13
    DEC_VAR                        shift and go to state 14
    CLASS_DEC                      shift and go to state 15
    FUNCTION_DEC                   shift and go to state 16

state 25

    (2) P_STRUCTURE -> P_STR_ONE PROG_MEMBERS PROG_M_ONE .

    $end            reduce using rule 2 (P_STRUCTURE -> P_STR_ONE PROG_MEMBERS PROG_M_ONE .)


state 26

    (9) PROG_M_ONE -> empty .

    $end            reduce using rule 9 (PROG_M_ONE -> empty .)


state 27

    (14) CLASS_STR -> CLASS_DEC LBRACE . CLASS_BODY RBRACE
    (19) CLASS_BODY -> . CLASS_CONSTRUCTOR CLASS_BODY_MEMBER CLASS_B_M_ONE
    (24) CLASS_CONSTRUCTOR -> . ID LPAREN CLASS_C_ONE RPAREN BLOCK

    ID              shift and go to state 46

    CLASS_BODY                     shift and go to state 44
    CLASS_CONSTRUCTOR              shift and go to state 45

state 28

    (32) FUNCTION -> FUNCTION_DEC BLOCK .

    VAR             reduce using rule 32 (FUNCTION -> FUNCTION_DEC BLOCK .)
    CLASS           reduce using rule 32 (FUNCTION -> FUNCTION_DEC BLOCK .)
    FUNC            reduce using rule 32 (FUNCTION -> FUNCTION_DEC BLOCK .)
    $end            reduce using rule 32 (FUNCTION -> FUNCTION_DEC BLOCK .)
    RBRACE          reduce using rule 32 (FUNCTION -> FUNCTION_DEC BLOCK .)
    RPAREN          reduce using rule 32 (FUNCTION -> FUNCTION_DEC BLOCK .)


state 29

    (86) BLOCK -> LBRACE . BLOCK_ONE RBRACE
    (87) BLOCK_ONE -> . BLOCK_STMT BLOCK_ONE
    (88) BLOCK_ONE -> . empty
    (89) BLOCK_STMT -> . STMT
    (90) BLOCK_STMT -> . DEC_VAR
    (110) empty -> .
    (91) STMT -> . ASSIGN_OP
    (92) STMT -> . FUNCTION_CALL
    (93) STMT -> . READ_FUNC
    (94) STMT -> . PRINT_FUNC
    (95) STMT -> . COND
    (96) STMT -> . WHILE_LOOP
    (97) STMT -> . RETURN_FUNC
    (45) DEC_VAR -> . VAR DEC_VAR_ONE SEMICOLON
    (44) ASSIGN_OP -> . VARIABLE ASSIGN EXP SEMICOLON
    (29) FUNCTION_CALL -> . ID LPAREN EXP FUNCTION_C_ONE RPAREN
    (102) READ_FUNC -> . READ VARIABLE SEMICOLON
    (101) PRINT_FUNC -> . PRINT LPAREN EXP RPAREN SEMICOLON
    (104) COND -> . IF LPAREN EXP RPAREN NESTED_BLOCK COND_ONE
    (103) WHILE_LOOP -> . WHILE LPAREN EXP RPAREN NESTED_BLOCK
    (98) RETURN_FUNC -> . RETURN RETURN_F_ONE SEMICOLON
    (40) VARIABLE -> . ID VARIABLE_ONE
    (41) VARIABLE -> . FIELD_ACCESS
    (27) FIELD_ACCESS -> . ID POINT ID

    RBRACE          reduce using rule 110 (empty -> .)
    VAR             shift and go to state 17
    ID              shift and go to state 60
    READ            shift and go to state 61
    PRINT           shift and go to state 62
    IF              shift and go to state 63
    WHILE           shift and go to state 64
    RETURN          shift and go to state 65
